Updates from Overleaf

--- a/interim-report/interim.bib
+++ b/interim-report/interim.bib
@@ -16,6 +16,12 @@ title={US Connected Vehicles Program},
 howpublished="\url{https://www.its.dot.gov/research_archives/connected_vehicle/connected_vehicle.htm}"
 }
 
+@misc{anatomical,
+author={National Cancer Institute},
+title={Anatomical Terminology},
+howpublished="\url{https://training.seer.cancer.gov/anatomy/body/terminology.html}"
+}
+
 @book{world2018global,
   title={Global status report on road safety 2018},
   author={World Health Organization},
@@ -27,6 +33,33 @@ howpublished="\url{https://www.its.dot.gov/research_archives/connected_vehicle/c
   title={How safe is walking and cycling in Europe? PIN Flash Report 38.},
   author={Adminait{\'e}-Fodor, Dovil{\'e} and Jost, Graziella},
   year={2020}
+}
+
+@article{kart2001pulse,
+  title={Pulse width modulation},
+  author={Kart, Diagram Source Brain},
+  year={2001}
+}
+
+@misc{arduinouno,
+author={Arduino.cc},
+title={UNO R3 Arduino Documentation},
+howpublished="\url{https://docs.arduino.cc/hardware/uno-rev3}"
+}
+
+@misc{hc06,
+author={Utmel Electronic},
+title={HC-06 Bluetooth Module: Pinout, Datasheet pdf and Arduino Connection},
+howpublished="\url{https://www.utmel.com/components/hc-06-bluetooth-module-pinout-datasheet-pdf-and-arduino-connection?id=884}"
+}
+
+@misc{bluetoothlimitations,
+  author={McClain, S.},
+  organization={Techwalla},
+  year={2017},
+  title = {What Are the Limitations of Bluetooth?},
+  howpublished = "\url{https://www.techwalla.com/articles/what-are-the-limitations-of-bluetooth}",
+  note={Last accessed: 2023-03-21}
 }
 
 @book{costoftransport,
