--- a/interim-report/interim.cls
+++ b/interim-report/interim.cls
@@ -24,6 +24,19 @@
 \addtolength\textheight{1.0in}
 \addtolength\topmargin{-0.5in}
 
+% fix itemise so it looks reasonable
+\renewcommand{\@listI}{%
+      \leftmargin=25pt
+      \rightmargin=0pt
+      \labelsep=5pt
+      \labelwidth=20pt
+      \itemindent=0pt
+      \listparindent=0pt
+      \topsep=0pt plus 2pt minus 4pt
+      \partopsep=0pt plus 1pt minus 1pt
+      \parsep=1pt plus 1pt
+      \itemsep=\parsep}
+
 \renewcommand\maketitle{\begin{titlepage}%
 \let\footnotesize\small
 \let\footnoterule\relax
