Updates from Overleaf

--- a/interim-report/interim.bib
+++ b/interim-report/interim.bib
@@ -16,6 +16,18 @@ title={US Connected Vehicles Program},
 howpublished="\url{https://www.its.dot.gov/research_archives/connected_vehicle/connected_vehicle.htm}"
 }
 
+@misc{vibrationmotor,
+author={techZeero},
+title={Vibration Motor with Arduino - Code, Circuit for Vibration Motor},
+howpublished="\url{https://techzeero.com/arduino-tutorials/vibration-motor-with-arduino/}"
+}
+
+@misc{bluetoothmodule,
+author={AranaCorp},
+title={Arduino and Bluetooth module HC-06},
+howpublished="\url{https://www.aranacorp.com/en/arduino-and-bluetooth-module-hc-06/}"
+}
+
 @misc{anatomical,
 author={National Cancer Institute},
 title={Anatomical Terminology},
